# eyesql

./: .gitignore  .pnp.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/api/: mod.rs
src-tauri/src/api/model/: database_connection.rs  mod.rs
src/components/Logo/: index.tsx
src/lib/api/: connection.ts
src/lib/app/atom/: database-connection-list.ts
src/lib/app/model/: database-connection.ts  database-kind.ts  port.ts
src/lib/app/state-machine/: database-connection-list.ts  database-connection.ts
src/lib/eyesql/: database-connection.ts
src/pages/Create/: DatabaseKindSelect.tsx  index.tsx
src/pages/Index/: NewButton.tsx  SearchBox.tsx  index.tsx
src/pages/NotFound/: index.tsx
src/styles/: BaseStyle.ts  theme.ts
