[package]
name = "eyesql"
version = "0.1.0"
description = "Beauty SQL Client"
authors = ["you"]
license = ""
repository = ""
default-run = "eyesql"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0.66"
serde = { version = "1.0.129", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
sqlx = { version = "0.5.7", features = ["runtime-async-std-rustls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
